--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -40,6 +40,7 @@ body {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
+    padding: 5px;
   }
   
   .past {
@@ -63,6 +64,7 @@ body {
     border-bottom-right-radius: 15px;
     background-color: #06AED5;
     color: white;
+    padding: 10px;
   }
   
   .saveBtn i:hover {
