--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,6 +11,7 @@ body {
     color: #000000;
     border-left: 1px solid black;
     padding: 10px;
+    width: 100%;
   }
   
   .jumbotron {
@@ -64,7 +65,8 @@ body {
     border-bottom-right-radius: 15px;
     background-color: #06AED5;
     color: white;
-    padding: 10px;
+    padding: 20px;
+    width: 100%;
   }
   
   .saveBtn i:hover {
