--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -31,6 +31,10 @@ body {
     text-align: center;
     border-radius: 15px;
   }
+
+  .time-block:last-child{
+    margin-bottom: 40px;
+  }
   
   .row {
     white-space: pre-wrap;
